tests/negative/lexer/binary_digit.orng
fn main() -> Int {
    0bXYZ
}